unpackaged/main/default/objects/WorkOrder/fields/Days_Since_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Created_Date__c</fullName>
    <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Created Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>