unpackaged/main/default/objects/WorkOrder/fields/Dealer_Name__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Name__c</fullName>
    <label>Dealer Name</label>
    <length>36</length>
    <type>Text</type>
</CustomField>