unpackaged/main/default/objects/WorkOrder/fields/Dealer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Phone__c</fullName>
    <label>Dealer Phone</label>
    <length>10</length>
    <type>Text</type>
</CustomField>