unpackaged/main/default/objects/WorkOrder/fields/Dispatch_Center__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Center__c</fullName>
    <label>Dispatch Center</label>
    <length>8</length>
    <type>Text</type>
</CustomField>