unpackaged/main/default/objects/WorkOrder/fields/Dispatch_duration__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_duration__c</fullName>
    <formula>if (Enroute_Timestamp__c &gt; Dispatched_Timestamp__c,  (Enroute_Timestamp__c -Dispatched_Timestamp__c)*1440,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dispatch Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>