unpackaged/main/default/objects/WorkOrder/fields/Dispatched_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Dispatched_Timestamp__c</fullName>
    <label>Dispatched Timestamp</label>
    <type>DateTime</type>
</CustomField>