unpackaged/main/default/objects/WorkOrder/fields/Driver_Directions__c.field-meta.xml
<CustomField>
    <fullName>Driver_Directions__c</fullName>
    <label>Driver Directions</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>