unpackaged/main/default/objects/WorkOrder/fields/Driving_Directions__c.field-meta.xml
<CustomField>
    <fullName>Driving_Directions__c</fullName>
    <label>Driving Directions</label>
    <type>TextArea</type>
</CustomField>