unpackaged/main/default/objects/WorkOrder/fields/Drop_Box_Info__c.field-meta.xml
<CustomField>
    <fullName>Drop_Box_Info__c</fullName>
    <label>Drop Box Info</label>
    <type>TextArea</type>
</CustomField>