unpackaged/main/default/objects/WorkOrder/fields/Duty_Indicator_Value__c.field-meta.xml
<CustomField>
    <fullName>Duty_Indicator_Value__c</fullName>
    <formula>TEXT( Case.Duty_Indicator_Value__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duty Indicator Value</label>
    <type>Text</type>
</CustomField>