unpackaged/main/default/objects/WorkOrder/fields/Editable__c.field-meta.xml
<CustomField>
    <fullName>Editable__c</fullName>
    <formula>ISBLANK( Cleared_Timestamp__c ) || ( !(ISPICKVAL(Status , &#39;Cleared&#39;) &amp;&amp; Locked_After_Clear__c ) &amp;&amp; Cleared_Timestamp__c &gt; DATETIMEVALUE(&quot;2021-08-10 10:30:00&quot;) )</formula>
    <label>Editable</label>
    <type>Checkbox</type>
</CustomField>