unpackaged/main/default/objects/WorkOrder/fields/Eligible_For_Payment__c.field-meta.xml
<CustomField>
    <fullName>Eligible_For_Payment__c</fullName>
    <formula>ServiceTerritory.Eligible_for_Payment__c</formula>
    <label>Eligible For Payment</label>
    <type>Checkbox</type>
</CustomField>