unpackaged/main/default/objects/WorkOrder/fields/Enroute_Duration__c.field-meta.xml
<CustomField>
    <fullName>Enroute_Duration__c</fullName>
    <formula>If(On_Location_Timestamp__c &gt; Enroute_Timestamp__c ,(On_Location_Timestamp__c -Enroute_Timestamp__c)*1440,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enroute Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>