unpackaged/main/default/objects/WorkOrder/fields/Enroute_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Enroute_Timestamp__c</fullName>
    <label>En Route Timestamp</label>
    <type>DateTime</type>
</CustomField>