unpackaged/main/default/objects/WorkOrder/fields/Entitlement_Override__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Designates a user has decided the entitlement value manually. If checked, automation will no longer update the entitlement checkbox (e.g., when resolution code updated).</description>
    <inlineHelpText>Designates a user has decided the entitlement value manually. If checked, automation will no longer update the entitlement checkbox (e.g., when resolution code updated).</inlineHelpText>
    <label>Entitlement Override</label>
    <type>Checkbox</type>
</CustomField>