unpackaged/main/default/objects/WorkOrder/fields/Entitlement_Used_Historic__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Used_Historic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used for loading historic ERS call data. Not for use in new functionality.</description>
    <label>Entitlement Used (Historic)</label>
    <type>Checkbox</type>
</CustomField>