unpackaged/main/default/objects/WorkOrder/fields/Expected_Work_Type_duration__c.field-meta.xml
<CustomField>
    <fullName>Expected_Work_Type_duration__c</fullName>
    <formula>WorkType.EstimatedDuration</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Work Type duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>