unpackaged/main/default/objects/WorkOrder/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>21</length>
    <type>Text</type>
</CustomField>