unpackaged/main/default/objects/WorkOrder/fields/Facility_Calculated_Mileage_Type__c.field-meta.xml
<CustomField>
    <fullName>Facility_Calculated_Mileage_Type__c</fullName>
    <formula>TEXT(ServiceTerritory.Enable_Calculate_Mileage__c)</formula>
    <label>Facility Calculated Mileage Type</label>
    <type>Text</type>
</CustomField>