unpackaged/main/default/objects/WorkOrder/fields/Facility_Calculated_Tow_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Facility_Calculated_Tow_Mileage__c</fullName>
    <formula>ServiceTerritory.Enable_Calculate_Tow_Mileage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facility Calculated Tow Mileage</label>
    <type>Checkbox</type>
</CustomField>