unpackaged/main/default/objects/WorkOrder/fields/Facility_Contract__c.field-meta.xml
<CustomField>
    <fullName>Facility_Contract__c</fullName>
    <formula>ServiceTerritory.Contract__r.Id</formula>
    <label>Facility Contract</label>
    <type>Text</type>
</CustomField>