unpackaged/main/default/objects/WorkOrder/fields/Facility_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Facility_Latitude__c</fullName>
    <formula>ServiceTerritory.Latitude</formula>
    <label>Facility Latitude</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>