unpackaged/main/default/objects/WorkOrder/fields/Facility_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Facility_Longitude__c</fullName>
    <formula>ServiceTerritory.Longitude</formula>
    <label>Facility Longitude</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>