unpackaged/main/default/objects/WorkOrder/fields/Facility_Number__c.field-meta.xml
<CustomField>
    <fullName>Facility_Number__c</fullName>
    <formula>ServiceTerritory.Facility_Number__c</formula>
    <label>Facility Number</label>
    <type>Text</type>
</CustomField>