unpackaged/main/default/objects/WorkOrder/fields/FeedBackID__c.field-meta.xml
<CustomField>
    <fullName>FeedBackID__c</fullName>
    <label>FeedBackID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>