unpackaged/main/default/objects/WorkOrder/fields/Flatbed_Requested__c.field-meta.xml
<CustomField>
    <fullName>Flatbed_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flatbed Requested</label>
    <type>Checkbox</type>
</CustomField>