unpackaged/main/default/objects/WorkOrder/fields/Force_D3_Clear_Sync__c.field-meta.xml
<CustomField>
    <fullName>Force_D3_Clear_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Force D3 Clear Sync</label>
    <type>Checkbox</type>
</CustomField>