unpackaged/main/default/objects/WorkOrder/fields/FSL_In_Jeopardy__c.field-meta.xml
<CustomField>
    <fullName>FSL_In_Jeopardy__c</fullName>
    <formula>In_Jeopardy__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FSL_In_Jeopardy</label>
    <type>Checkbox</type>
</CustomField>