unpackaged/main/default/objects/WorkOrder/fields/FSL_Milestone_Issued_Warning__c.field-meta.xml
<CustomField>
    <fullName>FSL_Milestone_Issued_Warning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FSL Milestone Issued Warning</label>
    <type>Checkbox</type>
</CustomField>