unpackaged/main/default/objects/WorkOrder/fields/FSL_Pacesetter__c.field-meta.xml
<CustomField>
    <fullName>FSL_Pacesetter__c</fullName>
    <label>Pacesetter</label>
    <length>8</length>
    <type>Text</type>
</CustomField>