unpackaged/main/default/objects/WorkOrder/fields/GOA_Update_TimeStamp__c.field-meta.xml
<CustomField>
    <fullName>GOA_Update_TimeStamp__c</fullName>
    <label>GOA Update TimeStamp</label>
    <type>DateTime</type>
</CustomField>