unpackaged/main/default/objects/WorkOrder/fields/GOA_Update_TimeStamp_Ago__c.field-meta.xml
<CustomField>
    <fullName>GOA_Update_TimeStamp_Ago__c</fullName>
    <formula>GOA_Update_TimeStamp__c + (10*(1/24/60))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GOA Update TimeStamp Ago</label>
    <type>DateTime</type>
</CustomField>