unpackaged/main/default/objects/WorkOrder/fields/Goodwill_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Goodwill_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Goodwill Indicator</label>
    <type>Checkbox</type>
</CustomField>