unpackaged/main/default/objects/WorkOrder/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member Household</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Work Orders (Member Household)</relationshipLabel>
    <relationshipName>Work_Orders3</relationshipName>
    <type>Lookup</type>
</CustomField>