unpackaged/main/default/objects/WorkOrder/fields/Impairment_SameDay_Service__c.field-meta.xml
<CustomField>
    <fullName>Impairment_SameDay_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Impairment SameDay Service</label>
    <type>Checkbox</type>
</CustomField>