unpackaged/main/default/objects/WorkOrder/fields/In_Jeopardy__c.field-meta.xml
<CustomField>
    <fullName>In_Jeopardy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will be set to true when an SLA violation occurs</description>
    <label>In Jeopardy</label>
    <type>Checkbox</type>
</CustomField>