unpackaged/main/default/objects/WorkOrder/fields/In_Parking_Garage__c.field-meta.xml
<CustomField>
    <fullName>In_Parking_Garage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Attribute from commercial intake</description>
    <label>In Parking Garage</label>
    <type>Checkbox</type>
</CustomField>