unpackaged/main/default/objects/WorkOrder/fields/In_Tow_Duration__c.field-meta.xml
<CustomField>
    <fullName>In_Tow_Duration__c</fullName>
    <formula>If (Tow_Complete_Timestamp__c &gt; In_Tow_Timestamp__c,(Tow_Complete_Timestamp__c - In_Tow_Timestamp__c)*1440,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In Tow Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>