unpackaged/main/default/objects/WorkOrder/fields/In_Tow_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>In_Tow_Timestamp__c</fullName>
    <label>In Tow Timestamp</label>
    <type>DateTime</type>
</CustomField>