unpackaged/main/default/objects/WorkOrder/fields/InitialETA_Legacy__c.field-meta.xml
<CustomField>
    <fullName>InitialETA_Legacy__c</fullName>
    <label>Initial ETA</label>
    <length>30</length>
    <type>Text</type>
</CustomField>