unpackaged/main/default/objects/WorkOrder/fields/Is_Draft_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Is_Draft_Work_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used for DRR Intake work Order API to consider whether it is an ongoing appointment or not</description>
    <label>Is Draft Work Order</label>
    <type>Checkbox</type>
</CustomField>