unpackaged/main/default/objects/WorkOrder/fields/Is_Historic__c.field-meta.xml
<CustomField>
    <fullName>Is_Historic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if true, is part of historic data loads from other environments.</description>
    <label>Is Historic</label>
    <type>Checkbox</type>
</CustomField>