unpackaged/main/default/objects/WorkOrder/fields/Is_Technician_Selected__c.field-meta.xml
<CustomField>
    <fullName>Is_Technician_Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Technician Selected?</label>
    <type>Checkbox</type>
</CustomField>