unpackaged/main/default/objects/WorkOrder/fields/Is_Tow_WorkType__c.field-meta.xml
<CustomField>
    <fullName>Is_Tow_WorkType__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Tow WorkType</label>
    <type>Checkbox</type>
</CustomField>