unpackaged/main/default/objects/WorkOrder/fields/Key_in_Dropbox__c.field-meta.xml
<CustomField>
    <fullName>Key_in_Dropbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Attribute from commercial intake</description>
    <label>Put Key in Dropbox</label>
    <type>Checkbox</type>
</CustomField>