unpackaged/main/default/objects/WorkOrder/fields/KMI_Auto_Call_Error__c.field-meta.xml
<CustomField>
    <fullName>KMI_Auto_Call_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to update the checkbox based on Call comments</description>
    <label>KMI Auto Call Error</label>
    <type>Checkbox</type>
</CustomField>