unpackaged/main/default/objects/WorkOrder/fields/Last_Modified_Status_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Status_Timestamp__c</fullName>
    <label>Last Modified Status Timestamp</label>
    <type>DateTime</type>
</CustomField>