unpackaged/main/default/objects/WorkOrder/fields/Legacy_Priority_Code__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Priority_Code__c</fullName>
    <label>Legacy Priority Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>