unpackaged/main/default/objects/WorkOrder/fields/Local_Time_of_Call__c.field-meta.xml
<CustomField>
    <fullName>Local_Time_of_Call__c</fullName>
    <description>Value 0 through 23 that corresponds to the hour in which the call was received, adjusted to the local timezone of the breakdown address</description>
    <inlineHelpText>Hour in which the call was received, adjusted to local timezone of the breakdown address</inlineHelpText>
    <label>Local Time of Call</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>