unpackaged/main/default/objects/WorkOrder/fields/Locked_After_Clear__c.field-meta.xml
<CustomField>
    <fullName>Locked_After_Clear__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Boolean field that indicates if this WorkOrder has been added to the Clear queue for sending to IRAS for processing</description>
    <label>Locked After Clear</label>
    <type>Checkbox</type>
</CustomField>