unpackaged/main/default/objects/WorkOrder/fields/Long_Tow_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Long_Tow_Allowed__c</fullName>
    <formula>NOT( ServiceContract.ParentServiceContract.AAA_Long_Tow_Consumed__c ) &amp;&amp; ServiceContract.ParentServiceContract.AAA_Long_Tow_Allowed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Long Tow Allowed</label>
    <type>Checkbox</type>
</CustomField>