unpackaged/main/default/objects/WorkOrder/fields/longTowAllowed__c.field-meta.xml
<CustomField>
    <fullName>longTowAllowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>longTowAllowed</label>
    <type>Checkbox</type>
</CustomField>