unpackaged/main/default/objects/WorkOrder/fields/Manual_Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>Manual_Override_Reason__c</fullName>
    <label>Manual Override Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tow Requires WL</fullName>
            </value>
            <value>
                <fullName>Tow Requires FB</fullName>
            </value>
            <value>
                <fullName>Tow Requires MD</fullName>
            </value>
            <value>
                <fullName>Tow Requires HD</fullName>
            </value>
            <value>
                <fullName>Tow Requires Low Clearance</fullName>
            </value>
            <value>
                <fullName>Member - Request - ICS</fullName>
            </value>
            <value>
                <fullName>Member - Request - FB</fullName>
            </value>
            <value>
                <fullName>Member - Request Alternate ICS</fullName>
            </value>
            <value>
                <fullName>Moving to LS Unit</fullName>
            </value>
            <value>
                <fullName>Moving to Tow Unit</fullName>
            </value>
            <value>
                <fullName>Moving due to Battery Availability</fullName>
            </value>
            <value>
                <fullName>Moving to Available Driver - Faster Response Time</fullName>
            </value>
            <value>
                <fullName>Driver - Extended on Previous Call - (End Time Updated)</fullName>
            </value>
            <value>
                <fullName>Driver - Late Start Time - (Exception Entered)</fullName>
            </value>
            <value>
                <fullName>Driver - Tablet Issues - (Exception Entered)</fullName>
            </value>
            <value>
                <fullName>Driver - End of Shift</fullName>
            </value>
            <value>
                <fullName>Driver/Truck Out of Service - (Schedule Updated)</fullName>
            </value>
            <value>
                <fullName>Appointment Time Call</fullName>
            </value>
            <value>
                <fullName>Broken Service Appointment (Tow Only)</fullName>
            </value>
            <value>
                <fullName>Emergency Call – Stacking</fullName>
            </value>
            <value>
                <fullName>Stacked Calls</fullName>
            </value>
            <value>
                <fullName>Unscheduled Call</fullName>
            </value>
            <value>
                <fullName>Facility Declined Service to Member</fullName>
            </value>
            <value>
                <fullName>Higher Scoring Candidate Found</fullName>
            </value>
            <value>
                <fullName>Schedule Time Adjustment on Same Technician (Overlap/Fill in gap)</fullName>
            </value>
            <value>
                <fullName>Battery Service Assigned to Tow Truck</fullName>
            </value>
            <value>
                <fullName>Flatbed Required</fullName>
            </value>
            <value>
                <fullName>Additional Equipment Needed</fullName>
            </value>
            <value>
                <fullName>Light Service Reclassified as Tow</fullName>
            </value>
            <value>
                <fullName>Other (Provide Comments)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>