unpackaged/main/default/objects/WorkOrder/fields/Marked_For_Deletion__c.field-meta.xml
<CustomField>
    <fullName>Marked_For_Deletion__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Marked For Deletion</label>
    <type>Checkbox</type>
</CustomField>