unpackaged/main/default/objects/WorkOrder/fields/Maximum_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Mileage__c</fullName>
    <label>Maximum Mileage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>