unpackaged/main/default/objects/WorkOrder/fields/Member_Account__c.field-meta.xml
<CustomField>
    <fullName>Member_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Work Orders (Members)</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>