unpackaged/main/default/objects/WorkOrder/fields/Member_ID__c.field-meta.xml
<CustomField>
    <fullName>Member_ID__c</fullName>
    <label>Member ID</label>
    <length>32</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>