unpackaged/main/default/objects/WorkOrder/fields/Member_Location_Address__c.field-meta.xml
<CustomField>
    <fullName>Member_Location_Address__c</fullName>
    <label>Member Location Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>