unpackaged/main/default/objects/WorkOrder/fields/Member_Number2__c.field-meta.xml
<CustomField>
    <fullName>Member_Number2__c</fullName>
    <description>Secondary field for MemberNumber tracking purpose</description>
    <label>Member Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>