unpackaged/main/default/objects/WorkOrder/fields/Member_Number__c.field-meta.xml
<CustomField>
    <fullName>Member_Number__c</fullName>
    <formula>IF( !ISBLANK( Contact.Member_Card_Num__c), Contact.Member_Card_Num__c,  Original_Member_Id__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Number</label>
    <type>Text</type>
</CustomField>