unpackaged/main/default/objects/WorkOrder/fields/Member_Present_at_vehicle__c.field-meta.xml
<CustomField>
    <fullName>Member_Present_at_vehicle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Member Present at vehicle</label>
    <type>Checkbox</type>
</CustomField>