unpackaged/main/default/objects/WorkOrder/fields/Member_Scheduled_Icon_del__c.field-meta.xml
<CustomField>
    <fullName>Member_Scheduled_Icon_del__c</fullName>
    <formula>IF(!ISBLANK(Non_Emergency_Appointment_Time__c) , IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &#39;/services&#39;, $Api.Partner_Server_URL_260)) &amp; &quot;resource/FSLGanttAppointmentLarge&quot;, &quot;Appointment&quot;, 35,35), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Scheduled</label>
    <type>Text</type>
</CustomField>