unpackaged/main/default/objects/WorkOrder/fields/Member_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Member_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Member Vehicle lookup</description>
    <label>Member Vehicle</label>
    <referenceTo>FSL_Member_Vehicle__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>