unpackaged/main/default/objects/WorkOrder/fields/Membership_Benefit_Level__c.field-meta.xml
<CustomField>
    <fullName>Membership_Benefit_Level__c</fullName>
    <formula>TEXT( Contact.Membership_Level__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership Benefit Level</label>
    <type>Text</type>
</CustomField>