unpackaged/main/default/objects/WorkOrder/fields/Membership_Level__c.field-meta.xml
<CustomField>
    <fullName>Membership_Level__c</fullName>
    <formula>TEXT( Contact.Membership_Level__c )</formula>
    <label>Membership Level</label>
    <type>Text</type>
</CustomField>