unpackaged/main/default/objects/WorkOrder/fields/Membership_License_Mismatch__c.field-meta.xml
<CustomField>
    <fullName>Membership_License_Mismatch__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Membership did not match driver&#39;s license (false = DID NOT MATCH)</description>
    <label>Membership License Mismatch</label>
    <type>Checkbox</type>
</CustomField>