unpackaged/main/default/objects/WorkOrder/fields/Mile_Marker__c.field-meta.xml
<CustomField>
    <fullName>Mile_Marker__c</fullName>
    <label>Mile Marker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>