unpackaged/main/default/objects/WorkOrder/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <formula>MONTH(DATEVALUE(CreatedDate))</formula>
    <label>Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>