unpackaged/main/default/objects/WorkOrder/fields/Near_Landmark__c.field-meta.xml
<CustomField>
    <fullName>Near_Landmark__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Attribute from commercial intake</description>
    <label>Near a Landmark</label>
    <type>Checkbox</type>
</CustomField>