unpackaged/main/default/objects/WorkOrder/fields/Needs_Flatbed__c.field-meta.xml
<CustomField>
    <fullName>Needs_Flatbed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flatbed Required</label>
    <type>Checkbox</type>
</CustomField>