unpackaged/main/default/objects/WorkOrder/fields/No_of_Rejected_Adjustment_SLI__c.field-meta.xml
<CustomField>
    <fullName>No_of_Rejected_Adjustment_SLI__c</fullName>
    <label>No of Rejected Adjustment SLI</label>
    <summaryFilterItems>
        <field>FSL_Service_Line_Item__c.Adjustment_Status__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </summaryFilterItems>
    <summaryForeignKey>FSL_Service_Line_Item__c.Work_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>