unpackaged/main/default/objects/WorkOrder/fields/No_of_Work_Orders__c.field-meta.xml
<CustomField>
    <fullName>No_of_Work_Orders__c</fullName>
    <description>For reporting, will provide number of unique work orders. Power of 1 formula.</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No. of Work Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>