unpackaged/main/default/objects/WorkOrder/fields/Non_AAA__c.field-meta.xml
<CustomField>
    <fullName>Non_AAA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this is a AAA or Non AAA Work Order</description>
    <label>Non-AAA</label>
    <type>Checkbox</type>
</CustomField>