unpackaged/main/default/objects/WorkOrder/fields/Non_Emergency_Appointment_Time__c.field-meta.xml
<CustomField>
    <fullName>Non_Emergency_Appointment_Time__c</fullName>
    <label>Non-Emergency Appointment Time</label>
    <length>30</length>
    <type>Text</type>
</CustomField>