unpackaged/main/default/objects/WorkOrder/fields/Number_of_Items_to_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Items_to_Invoice__c</fullName>
    <label>Number of Items to Invoice</label>
    <summaryFilterItems>
        <field>FSL_Service_Line_Item__c.Ready_for_Invoicing__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>FSL_Service_Line_Item__c.Adjustment_Status__c</field>
        <operation>notEqual</operation>
        <value>Pending</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>FSL_Service_Line_Item__c.Adjustment_Status__c</field>
        <operation>notEqual</operation>
        <value>Rejected</value>
    </summaryFilterItems>
    <summaryForeignKey>FSL_Service_Line_Item__c.Work_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>