unpackaged/main/default/objects/WorkOrder/fields/Number_Of_Passengers__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Passengers__c</fullName>
    <label>Number Of Passengers</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>