unpackaged/main/default/objects/WorkOrder/fields/On_a_Highway__c.field-meta.xml
<CustomField>
    <fullName>On_a_Highway__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Attribute from commercial intake</description>
    <label>On a Highway</label>
    <type>Checkbox</type>
</CustomField>