unpackaged/main/default/objects/WorkOrder/fields/On_Location_Duration__c.field-meta.xml
<CustomField>
    <fullName>On_Location_Duration__c</fullName>
    <formula>If( Is_Tow_WorkType__c, 
  if(In_Tow_Timestamp__c &gt; On_Location_Timestamp__c,(In_Tow_Timestamp__c - On_Location_Timestamp__c)*1440,0),
if (Cleared_Timestamp__c &gt; On_Location_Timestamp__c, (Cleared_Timestamp__c - On_Location_Timestamp__c)*1440,0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On Location Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>