unpackaged/main/default/objects/WorkOrder/fields/On_Location_GOA_Update__c.field-meta.xml
<CustomField>
    <fullName>On_Location_GOA_Update__c</fullName>
    <label>On Location GOA Update</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Member</fullName>
            </value>
            <value>
                <fullName>No Member &amp; No Vehicle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>