unpackaged/main/default/objects/WorkOrder/fields/On_Location_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>On_Location_Timestamp__c</fullName>
    <label>On Location Timestamp</label>
    <type>DateTime</type>
</CustomField>