unpackaged/main/default/objects/WorkOrder/fields/onlineGarageMember__c.field-meta.xml
<CustomField>
    <fullName>onlineGarageMember__c</fullName>
    <defaultValue>false</defaultValue>
    <label>onlineGarageMember</label>
    <type>Checkbox</type>
</CustomField>