unpackaged/main/default/objects/WorkOrder/fields/Original_Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Original_Member_Id__c</fullName>
    <label>Original Member Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>