unpackaged/main/default/objects/WorkOrder/fields/Original_Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Original_Service_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Service Territory</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>