unpackaged/main/default/objects/WorkOrder/fields/Overridden_By__c.field-meta.xml
<CustomField>
    <fullName>Overridden_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Overridden By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Overridden_Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>